--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,17 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-"
 )
 ```
+
 # horus
+
+[![Travis build status](https://travis-ci.org/EmilHvitfeldt/horus.svg?branch=master)](https://travis-ci.org/EmilHvitfeldt/horus)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/EmilHvitfeldt/horus?branch=master&svg=true)](https://ci.appveyor.com/project/EmilHvitfeldt/horus)
+[![Coverage status](https://codecov.io/gh/EmilHvitfeldt/horus/branch/master/graph/badge.svg)](https://codecov.io/github/EmilHvitfeldt/horus?branch=master)
+[![CRAN status](https://www.r-pkg.org/badges/version/horus)](https://cran.r-project.org/package=horus)
+[![CRAN download badge](http://cranlogs.r-pkg.org/badges/horus)](https://CRAN.R-project.org/package=horus)
+[![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+
+
 
 **WIP -- Very early build, things are very likely to change -- WIP**
 
@@ -37,4 +47,3 @@ There is no reason why a principal component plot of a dataset should be as hard
 library(horus)
 viz_pca(iris, Species)
 ```
-
