--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# horus
+# horus <img src='man/figures/logo.png' align="right" height="139" />
 
 [![Travis build status](https://travis-ci.org/EmilHvitfeldt/horus.svg?branch=master)](https://travis-ci.org/EmilHvitfeldt/horus)
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/EmilHvitfeldt/horus?branch=master&svg=true)](https://ci.appveyor.com/project/EmilHvitfeldt/horus)
