--- a/README.Rmd
+++ b/README.Rmd
@@ -4,24 +4,19 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r setup, include = FALSE}
+```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/README-"
+  fig.path = "man/figures/README-",
+  out.width = "100%"
 )
 ```
 
 # horus <img src='man/figures/logo.png' align="right" height="139" />
 
-[![Travis build status](https://travis-ci.org/EmilHvitfeldt/horus.svg?branch=master)](https://travis-ci.org/EmilHvitfeldt/horus)
-[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/EmilHvitfeldt/horus?branch=master&svg=true)](https://ci.appveyor.com/project/EmilHvitfeldt/horus)
-[![Coverage status](https://codecov.io/gh/EmilHvitfeldt/horus/branch/master/graph/badge.svg)](https://codecov.io/github/EmilHvitfeldt/horus?branch=master)
-[![CRAN status](https://www.r-pkg.org/badges/version/horus)](https://cran.r-project.org/package=horus)
-[![CRAN download badge](http://cranlogs.r-pkg.org/badges/horus)](https://CRAN.R-project.org/package=horus)
-[![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
-
-
+<!-- badges: start -->
+<!-- badges: end -->
 
 **WIP -- Very early build, things are very likely to change -- WIP**
 
@@ -41,7 +36,7 @@ In the future the package will be available on CRAN as well.
 
 ## Example
 
-There is no reason why a principal component plot of a dataset should be as hard as it corrently is in R. Using **horus** it is down to a single line!
+There is no reason why a principal component plot of a data set should be as hard as it currently is in R. Using **horus** it is down to a single line!
 
 ```{r}
 library(horus)
