link to more examples

--- a/README.Rmd
+++ b/README.Rmd
@@ -43,3 +43,7 @@ There is no reason why a principal component plot of a data set should be as har
 library(horus)
 viz_pca(iris, Species)
 ```
+
+## Advanced Gallary
+
+[Random Forrest variability Visualization](https://gist.github.com/EmilHvitfeldt/e81f9d462c423978f515f036c8ad0232)
